Fixed action bar not clickable on IE 10 and 9

--- a/resources/assets/less/partials/_dropzone.less
+++ b/resources/assets/less/partials/_dropzone.less
@@ -86,7 +86,7 @@
 
     display: block;
 
-    z-index: 1000;
+    z-index: -1;
 
     position: fixed;
 
@@ -122,6 +122,7 @@
     .dz-message {
       opacity: 0.6;
       display: block;
+      z-index: 1000;
     }
   }
 
